Fixed Mapping Issues